@@ -2,17 +2,16 @@ package com.miotech.kun.workflow.common.resource;
 
 import com.google.inject.Singleton;
 import com.miotech.kun.commons.utils.ExceptionUtils;
-import org.apache.commons.lang3.StringUtils;
+import com.miotech.kun.workflow.core.resource.Resource;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.MalformedURLException;
+import java.net.URL;
 
 @Singleton
 public class ResourceLoaderImpl implements ResourceLoader {
-
-    private final Logger logger = LoggerFactory.getLogger(ResourceLoaderImpl.class);
+    private static final Logger logger = LoggerFactory.getLogger(ResourceLoaderImpl.class);
 
     @Override
     public Resource getResource(String location) {
@@ -20,24 +19,21 @@ public class ResourceLoaderImpl implements ResourceLoader {
     }
 
     @Override
-    public Resource getResource(String location, boolean createIfNotExist) {
+    public Resource getResource(String location, boolean createIfNotExists) {
         logger.debug("Get resource of {}", location);
 
         try {
-            URI uri = new URI(location);
-            String scheme = uri.getScheme();
-            if (StringUtils.isAnyEmpty(scheme)) {
-                logger.debug("Cannot refer the resource schema, use file as default");
-                scheme = "file";
-            }
+            URL url = new URL(new URL("file://"), location);
+            String scheme = url.getProtocol();
+
             switch (scheme) {
                 case FileResource.FILE_SCHEME:
-                    return new FileResource(uri.getRawPath(), createIfNotExist);
+                    return new FileResource(url.getPath(), createIfNotExists);
                 default:
                     throw new RuntimeException("Unsupported resource type: " + scheme);
             }
-        } catch (URISyntaxException e) {
-            logger.error("Invalid resource uri: {}", location, e);
+        } catch (MalformedURLException e) {
+            logger.error("Invalid resource url: {}", location, e);
             throw ExceptionUtils.wrapIfChecked(e);
         }
     }
